[MOD/#24]  - 제휴 API 추가 구현 및 수정